<resources>
    <string name="app_name">123RFID Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="rapid_read">Rapid Read</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string-array name="options_array">
        <item>Home</item>
        <item>Rapid Read</item>
        <item>Inventory</item>
        <item>Locate Tag</item>
        <item>Settings</item>
        <item>Tag Write</item>
        <item>Pre Filters</item>
        <item>Readers List</item>
        <item>About</item>
        <item>Profiles</item>
        <item>Socket</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">INSTANT VISIBLITY INTO YOUR OPERATIONS</string>
    <string name="nav_header_desc">123RFID Mobile</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="socket_fragment">Socket Setting</string>
    <string name="action_none">None</string>
    <string name="action_user">User</string>
    <string name="action_reserved">Reserved</string>
    <string name="action_tid">TID</string>
    <string name="action_epic">EPC</string>
    <string name="title_activity_antenna_settings">Antenna</string>
    <string name="title_activity_readers_list">Readers List</string>
    <string name="title_activity_application_settings">Application</string>
    <string name="title_activity_singulation_control">Singulation Control</string>
    <string name="unique_tag_settings">Unique Tag Settings</string>
    <string name="unique_tag_reads">Report Unique tags</string>
    <string name="report_unique_tags">Report Unique tags</string>
    <string-array name="link_profile_array">
        <item>RF Mode 1</item>
        <item>RF Mode 2</item>
        <item>RR Mode 1</item>
        <item>RR Mode 2</item>
        <item>RS Mode 1</item>
        <item>RS Mode 2</item>
    </string-array>
    <string-array name="session_array">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="tag_population_array">
        <item>30</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="inventory_state_array">
        <item>STATE A</item>
        <item>STATE B</item>
        <item>AB FLIP</item>
    </string-array>
    <string-array name="sl_flags_array">
        <item>ALL</item>
        <item>DEASSERTED</item>
        <item>ASSERTED</item>
    </string-array>
    <string-array name="inv_menu_items">
        <item>None</item>
        <item>User</item>
        <item>Reserved</item>
        <item>TID</item>
        <item>EPC</item>
    </string-array>
    <string-array name="acess_read_write_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
        <item>ACCESS PASSWORD</item>
        <item>KILL PASSWORD</item>
    </string-array>
    <string-array name="acess_lock_memory_bank_array">
        <item>EPC</item>
        <item>ACCESS PWD</item>
        <item>KILL PWD</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="acess_lock_privilege_array">
        
        <item>Read and Write</item>
        <item>Permanent Lock</item>
        <item>Permanent Unlock</item>
        <item>Unlock</item>
    </string-array>
    <string-array name="pre_filter_memory_bank_array">
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string-array name="pre_filter_action_array">
        <item>INV A NOT INV B OR ASRT SL NOT DSRT SL</item>
        <item>INV A OR ASRT SL</item>
        <item>NOT INV B OR NOT DSRT SL</item>
        <item>INV A2BB2A NOT INV A OR NEG SL NOT ASRT SL</item>
        <item>INV B NOT INV A OR DSRT SL NOT ASRT SL</item>
        <item>INV B OR DSRT SL</item>
        <item>NOT INV A OR NOT ASRT SL</item>
        <item>NOT INV A2BB2A OR NOT NEG SL</item>
    </string-array>
    <string-array name="pre_filter_target_options">
        <item>SESSION S0</item>
        <item>SESSION S1</item>
        <item>SESSION S2</item>
        <item>SESSION S3</item>
        <item>SL FLAG</item>
    </string-array>
    <string-array name="pre_filter_tag_id_array">
        <item>AD9915404190725965400412</item>
        <item>AD9915404190725965400413</item>
        <item>AD9915404190725965400414</item>
        <item>AD9915404190725965400415</item>
        <item>AD9915404190725965400416</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="title_activity_access_operations">TagWriteActivity</string>
    <string-array name="start_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Periodic</item>
    </string-array>
    <string-array name="stop_trigger_array">
        <item>Immediate</item>
        <item>Handheld</item>
        <item>Duration</item>
        <item>Tag Observation</item>
        <item>N attempts</item>
    </string-array>
    <string-array name="beeper_volume_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pie_array">
        <item>1500</item>
        <item>2000</item>
    </string-array>
    <string-array name="pie_array_668">
        <item>668</item>
    </string-array>
    <string-array name="pie_array_2000">
        <item>2000</item>
    </string-array>
    <string-array name="tari_array">
        <item>6250</item>
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_625">
        <item>6250</item>
    </string-array>
    <string-array name="tari_array_668">
        <item>668</item>
    </string-array>
    <string-array name="tari_array_12_25">
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_18_25">
        <item>18800</item>
        <item>20900</item>
        <item>23000</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_18">
        <item>12500</item>
        <item>14600</item>
        <item>16700</item>
        <item>18800</item>
    </string-array>
    <string-array name="tari_array_18_only">
        <item>18800</item>
    </string-array>
    <string-array name="tari_array_25_only">
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_25_6300">
        <item>12500</item>
        <item>18800</item>
        <item>25000</item>
    </string-array>
    <string-array name="tari_array_18_6300">
        <item>12500</item>
        <item>18800</item>
    </string-array>
    <string name="none_paired">No Devices Found</string>
    <string name="select_device">Select A Device</string>
    <string name="none_found">No Devices Found</string>
    <string name="error_security">Security Error in SerialPortActivity</string>
    <string name="error_unknown">Unknown Error in Serial Port Activity</string>
    <string name="error_configuration">Configuration Error in SerialPortActivity</string>
    <string name="title_activity_base_receiver">BaseReceiverActivity</string>
    <string name="error_unsatisfied_link">UnsatisfiedLinkError in SerialPortActivity</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_regulatory_settings">Regulatory</string>
    <string name="title_activity_start_stop_trigger">Start\\Stop Triggers</string>
    <string name="title_activity_save_configuration">Save Configuration</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_beeper">Beeper</string>
    <string name="title_activity_led">LED</string>
    <string name="led_settings_title">LED Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings_detail">Setting Details</string>
    <string name="action_search">Search</string>
    <string name="action_rr">Rapid Read</string>
    <string name="search_hint">Enter Tag ID</string>
    <string name="active_reader_title">Active Reader</string>
    <string name="available_readers_title">Available Readers</string>
    <string name="channel_selection">Channel Selection</string>
    <string name="reader_conn_sett">Reader Connection Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="tag_reporting">Tag Reporting</string>
    <string name="battery">Battery</string>
    <string name="rr_unique_tags_title">UNIQUE TAGS</string>
    <string name="rr_total_tag_title">TOTAL READS</string>
    <string name="rr_unique_tags_title_MM">MISSING TAGS</string>
    <string name="rr_total_tag_title_MM">MATCHING TAGS</string>
    <string name="rr_read_time_title">READ TIME</string>
    <string name="rr_read_rate_title">READ RATE</string>
    <string name="start_title">START</string>
    <string name="tag_id">Tag ID</string>
    <string name="power_level_title">Power Level \n(tens of dbm)</string>
    <string name="link_profile_title">Link Profile</string>
    <string name="region_title">Region</string>
    <string name="warning_title">Warning:</string>
    <string name="country_selection_warning">Select only the country in which you are using the device</string>
    <string name="RFID_demo_app">123RFID Mobile Application</string>
    <string name="moto_solutions">Zebra Technologies</string>
    <string name="app_version_title">Application Version</string>
    <string name="rfid_sled">RFID Reader:</string>
    <string name="module_version">Module Version</string>
    <string name="radio_version">Radio Version</string>
    <string name="copyright_info">Copyright © 2020</string>
    <string name="sl_flag_title">SL Flag</string>
    <string name="inv_state_title">Inventory State</string>
    <string name="tag_population_title">Tag Population</string>
    <string name="session_title">Session</string>
    <string name="app_version">1.0.5.18</string>
    <string name="battery_level_desc">Icon depicting level of battery in the reader</string>
    <string name="battery_percentage_text">0%</string>
    <string name="home_rapid_read">Rapid Read</string>
    <string name="home_inventory">Inventory</string>
    <string name="home_settings">Settings</string>
    <string name="home_locate">Locate Tag</string>
    <string name="home_filter">Pre Filters</string>
    <string name="tag_write">Tag Write</string>
    <string name="colon">:</string>
    <string name="password_connection_title">Connection password required !</string>
    <string name="hint_password">Password</string>
    <string name="cancel_title">Cancel</string>
    <string name="connect_title">Connect</string>
    <string name="battery_no_active_connection_message">Status: No active connection</string>
    <string name="tari_title">Tari</string>
    <string name="PIE_title">PIE</string>
    <string name="action_locate">Locate</string>
    <string name="action_tag_read_write">Tag Read/Write</string>
</resources>