<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#CC000000"
        android:padding="@dimen/default_padding">

        <TextView
            style="@style/style_medium_font"
            android:paddingBottom="10dp"
            android:text="@string/password_connection_title"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/connect_password"
            style="@style/style_medium_font"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:maxLength="32"
            android:inputType="textNoSuggestions"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/style_pwd_dialog_button_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/cancel_title" />

        <Button
            android:id="@+id/btn_connect"
            style="@style/style_pwd_dialog_button_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.5dp"
            android:layout_weight="50"
            android:text="@string/connect_title" />

    </LinearLayout>

</LinearLayout>